Pre tartan hacks rehaul. (start from scratch)

--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,27 @@
 {
-  "name": "Getting Started Example",
+  "name": "Lupole",
   "version": "1.0",
-  "description": "Build an Extension!",
-  "permissions": ["activeTab", "declarativeContent", "storage"],
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  },
-  "page_action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+  "description": "The Alternative Spending Assistant!",
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "jquery-3.4.1.js",
+        "content.js"
+      ]
     }
+  ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
   },
-  "options_page": "options.html",
-  "icons": {
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
+  "browser_action": {
+    "default_icon": "icon.jpg",
+    "default_popup": "popup.html",
+    "default_title": "Alternative Spending Assistant"
   },
   "manifest_version": 2
 }
