--- a/manifest.json
+++ b/manifest.json
@@ -4,22 +4,15 @@
   "description": "The Alternative Spending Assistant!",
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "jquery-3.4.1.js",
-        "content.js"
-      ]
+      "matches": ["https://www.amazon.com/*"],
+      "js": ["content.js"]
     }
   ],
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "scripts": ["background.js"]
   },
   "browser_action": {
-    "default_icon": "icon.jpg",
+    "default_icon": "icon.png",
     "default_popup": "popup.html",
     "default_title": "Alternative Spending Assistant"
   },
