--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,12 @@
     "scripts": ["background.js"]
   },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": {
+      "16": "icon.png",
+      "24": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
+    },
     "default_popup": "popup.html",
     "default_title": "Alternative Spending Assistant"
   },
